--- a/css/style.css
+++ b/css/style.css
@@ -325,5 +325,26 @@ border-style: solid;
     border-bottom-right-radius: 8px;
    }
    .quote-section{
+    background-color:#ffffff ;
+    margin: 32px 0 80px 0;
+    padding: 48px 24px;
+    border-radius: 16px;
     
+   }
+   .name{
+    font-size: 20px;
+    font-weight: semibold;
+    margin: 12px 0 4px;
+    color: #404040;
+   }
+   .younus-quote{
+    color: #818181 ;
+    font-weight: regular;
+    font-size: 16px;
+    
+   }
+   .bg-img{
+    background-image: url('../assets/quote-bg.png');
+    background-repeat: no-repeat;
+    background-position:top left  ;
    }
